Store RegistrationData in SharedPreferences

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'dagger.hilt.android.plugin'
     id 'kotlin-kapt'
     id 'kotlin-parcelize'
+    id 'kotlinx-serialization'
 }
 
 android {
@@ -39,6 +40,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.security:security-crypto-ktx:1.1.0-alpha03'
     kapt "com.google.dagger:hilt-compiler:2.42"
     implementation 'com.google.dagger:hilt-android:2.42'
 
@@ -73,4 +75,6 @@ dependencies {
     def arch_version = "2.1.0"
     testImplementation "androidx.arch.core:core-testing:$arch_version"
     androidTestImplementation "androidx.arch.core:core-testing:$arch_version"
+
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.2.2"
 }
