--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,34 +40,22 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.security:security-crypto-ktx:1.1.0-alpha03'
-    kapt "com.google.dagger:hilt-compiler:2.42"
-    implementation 'com.google.dagger:hilt-android:2.42'
+    def hilt_version = "2.42"
+    kapt "com.google.dagger:hilt-compiler:$hilt_version"
+    implementation "com.google.dagger:hilt-android:$hilt_version"
 
-    // Java language implementation
-    implementation("androidx.navigation:navigation-fragment:2.5.0")
-    implementation("androidx.navigation:navigation-ui:2.5.0")
+    def crypto_version = "1.1.0-alpha03"
+    implementation "androidx.security:security-crypto-ktx:$crypto_version"
 
+    def navigation_version = "2.5.0"
     // Kotlin
-    implementation("androidx.navigation:navigation-fragment-ktx:2.5.0")
-    implementation("androidx.navigation:navigation-ui-ktx:2.5.0")
-
+    implementation("androidx.navigation:navigation-fragment-ktx:$navigation_version")
+    implementation("androidx.navigation:navigation-ui-ktx:$navigation_version")
     // Feature module Support
-    implementation("androidx.navigation:navigation-dynamic-features-fragment:2.5.0")
-
+    implementation("androidx.navigation:navigation-dynamic-features-fragment:$navigation_version")
     // Testing Navigation
-    androidTestImplementation("androidx.navigation:navigation-testing:2.5.0")
+    androidTestImplementation("androidx.navigation:navigation-testing:$navigation_version")
 
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.4.2'
-    implementation 'com.google.android.material:material:1.6.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.2'
-
-    //MockK
     def mockk_version = "1.12.4"
     testImplementation "io.mockk:mockk:$mockk_version"
     androidTestImplementation "io.mockk:mockk-android:$mockk_version"
@@ -76,5 +64,16 @@ dependencies {
     testImplementation "androidx.arch.core:core-testing:$arch_version"
     androidTestImplementation "androidx.arch.core:core-testing:$arch_version"
 
+    // Other
+    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.2.2"
+
+    // Other Testing
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.2'
 }
